# Ampel-State-Machine

./: README.md
Firmware/: CMakeLists.txt
Firmware/src/: traffic_light.c
